--- a/src/menu/menu.css
+++ b/src/menu/menu.css
@@ -11,6 +11,7 @@
     position: sticky;
     position: -webkit-sticky;
     top: 0;
+    z-index: 1000;
 }
 
 .logo {
